--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
     {{content-for "head"}}
 
     <link rel="stylesheet" href="{{rootURL}}assets/vendor.css">
-    <link rel="stylesheet" href="{{rootURL}}assets/ga-wdi-boston.ember-template.css">
+    <link rel="stylesheet" href="{{rootURL}}assets/ga-wdi-boston.ember-components.css">
 
     {{content-for "head-footer"}}
   </head>
